GNOME Bugzilla – Bug 684359
gck: Keep enumerating if getting info about one slot fails.
Last modified: 2019-03-23 21:19:37 UTC
This is necessary to implement a 'list' command in gnome-keyring-3
Created attachment 224712 [details] [review] gck: Keep enumerating if getting info about one slot fails. * This is happening with the opensc PKCS#11 driver.
Merged into master.