gck: Keep enumerating if getting info about one slot fails.

* This is happening with the opensc PKCS#11 driver.

https://bugzilla.gnome.org/show_bug.cgi?id=684359